used axios to make API request

--- a/views/pokemon.pug
+++ b/views/pokemon.pug
@@ -2,7 +2,9 @@ doctype html
 html(lang="en")
   head
     title Pokedex
+    link(rel="stylesheet", href="/static/stylesheet.css")
   body
     h1 Pokedex
      .wrapper 
       .card
+
