got the API to render on pokedex webpage

--- a/views/pokemon.pug
+++ b/views/pokemon.pug
@@ -7,4 +7,10 @@ html(lang="en")
     h1 Pokedex
      .wrapper 
       .card
+        p #{name}
+        p # #{id}
+        //- p type: #{types}
+        img(src=`${image}` height='250px' width='200px')
 
+       
+       
