--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -9,5 +9,6 @@
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: 1fr, 5fr;
         background-color: aquamarine;
+        font-size: 15px;
   }
   
