--- a/web/pokemon.css
+++ b/web/pokemon.css
@@ -1,5 +1,5 @@
 /* Color variables */
-:root {
+/* :root {
     --bug: #3b9950;
     --dark: #5a5979;
     --dragon:#61cad9;
@@ -18,7 +18,7 @@
     --rock:#8a3d22;
     --steel:#42bd94;
     --water:#86a9fa;
-}
+} */
 
 /* Global Layout Set-up */
 * {
@@ -88,3 +88,76 @@ h4.pNum {
     border-bottom: .1rem solid lightgrey;
     border-bottom-width: 90%;
 }
+
+.bug { 
+    background-color: #3b9950; 
+}
+
+.dark { 
+    background-color: #5a5979; 
+}
+
+.dragon { 
+    background-color: #61cad9; 
+}
+
+.electric  {
+    background-color: #fbfb71; 
+}
+
+.fairy { 
+    background-color: #ea1169; 
+}
+
+.fighting  {
+    background-color: #ef6138; 
+}
+
+
+.fire  {
+    background-color: #fd4c59; 
+}
+
+.flying  {
+    background-color: #93b2c7; 
+}
+
+.ghost  {
+    background-color: #906790; 
+}
+
+.grass  {
+    background-color: #26cb4f; 
+}
+
+.ground  {
+    background-color: #6e491f; 
+}
+
+.ice  {
+    background-color: #d9eefa; 
+}
+
+.normal  {
+    background-color: #c998a7; 
+}
+
+.poison { 
+    background-color: #9b69d8; 
+}
+
+.psychic  {
+    background-color: #f71c91; 
+}
+
+.rock  {
+    background-color: #8a3d22; 
+}
+
+.steel { 
+    background-color: #42bd94; 
+}
+
+.water { 
+    background-color: #86a9fa 
+};
