--- a/web/pokemon.css
+++ b/web/pokemon.css
@@ -48,32 +48,36 @@ h1 {
 
 .poke_container {
     display:flex;
-    flex-wrap: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin: 0 auto;
-    max-width: 1200px;
+    margin: 10%;
+    
 }
 
-.poke.img-container {
-    width: auto;
-    height: auto;
-}
+/*.pokemon.img-container {
+    width: ;
+    height: ;
+    border: solid 1px rgba(0,0,0,.2);
+    border-radius: 50%;
+}*/
 
-.poke.img-container img  {
+/*.pokemon.img-container img  {
     max-width: auto;
-}
+}*/
 
 .pokemon {
     background-color: #3b9950;
+    /*width: auto;
+    height: auto;*/
     /*margin-top: 4rem;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     min-width: 15%;
     padding-bottom: 2.5em;*/
-    border-style:solid; 
+    border: solid 1px black; 
 }
 
-h4.pName {
+/*.info.pName {
     margin-top: 1rem;
     display: float;
     float: left;
@@ -81,7 +85,7 @@ h4.pName {
     font-weight: bold;
 }
 
-h4.pNum {
+.info.pNum {
     margin-top: 1rem;
     display: float;
     float: right;
@@ -89,11 +93,11 @@ h4.pNum {
     font-weight: bold;  
 }
 
-.line {
+.info.line {
     height: 3.5rem;
     border-bottom: .1rem solid lightgrey;
     border-bottom-width: 90%;
-}
+}*/
 
 .bug { 
     background-color: #3b9950; 
