--- a/web/pokemon.css
+++ b/web/pokemon.css
@@ -48,36 +48,28 @@ h1 {
 
 .poke_container {
     display:flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 10%;
-    
+    margin: 0 auto;
+    max-width: 1200px;
 }
 
-/*.pokemon.img-container {
-    width: ;
-    height: ;
-    border: solid 1px rgba(0,0,0,.2);
-    border-radius: 50%;
-}*/
+img {
+    width: 80%;
+    height: auto;
+}
 
-/*.pokemon.img-container img  {
-    max-width: auto;
-}*/
-
-.pokemon {
-    background-color: #3b9950;
-    /*width: auto;
-    height: auto;*/
-    /*margin-top: 4rem;
+.card {
+    background-color: var(--electric);
+    margin-top: 4rem;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     min-width: 15%;
-    padding-bottom: 2.5em;*/
-    border: solid 1px black; 
+    padding-bottom: 2.5em;
+    border-style:solid; 
 }
 
-/*.info.pName {
+h4.pName {
     margin-top: 1rem;
     display: float;
     float: left;
@@ -85,7 +77,7 @@ h1 {
     font-weight: bold;
 }
 
-.info.pNum {
+h4.pNum {
     margin-top: 1rem;
     display: float;
     float: right;
@@ -93,11 +85,11 @@ h1 {
     font-weight: bold;  
 }
 
-.info.line {
+.line {
     height: 3.5rem;
     border-bottom: .1rem solid lightgrey;
     border-bottom-width: 90%;
-}*/
+}
 
 .bug { 
     background-color: #3b9950; 
