--- a/web/pokemon.css
+++ b/web/pokemon.css
@@ -34,6 +34,10 @@ h1 {
     grid-template-columns: auto auto auto auto;
 }
 
+.pButton {
+   margin-left: 3rem;
+   margin-bottom: 5rem;
+}
 
 img {
     margin-left: auto;
